--- a/front-end/src/app/shared/partials/sign/sign.component.scss
+++ b/front-end/src/app/shared/partials/sign/sign.component.scss
@@ -9,12 +9,34 @@ $btnRowHeight: 45px;
       width: 100%;
       .header__text {
         float: left;
-        width: 72%
+        width: 55%;
+        @include media(tablet) {
+          width: 40%;
+        }
+        @include media(mediumDesktop) {
+          width: 40%;
+        }         
+        @include media(largeDesktop) {
+          width: 40%;
+        }         
       }
       .header__btns {
-        float: right;
-        padding-top: 15px;
-        width: 25%;
+        float: left;
+        padding-top: 0;
+        text-align: right;
+        width: 30%;
+        @include media(tablet) {
+          padding-top: 0;
+          width: 50%;
+        }
+        @include media(mediumDesktop) {
+          padding-top: 0;
+          width: 50%;
+        }         
+        @include media(largeDesktop) {
+          padding-top: 0;
+          width: 50%;
+        }         
         .btn-print-preview {
           @extend .btn-secondary-gray;
           margin-right: 5px;
@@ -34,6 +56,7 @@ $btnRowHeight: 45px;
       display: block;
       position: relative;
       width: 100%;
+      .grid-r
       form {
         .form1-link {
           color: $dodgerBlue;
@@ -54,62 +77,9 @@ $btnRowHeight: 45px;
             margin-top: 5px;
           }
         }
-        .forms__btn-container {
-          .forms__btn-row {
-            display: block;
-            height: $btnRowHeight;
-            margin-bottom: 15px;
-            position: relative;
-            width: 100%;
-            @include clearfix();
-          }
-          .forms__btn-right {
-            float: right;
-          }
-          .forms__btn-previous {
-            float: left;
-            width: 55%;
-            @include webkitBrowser() {
-              width: 56%;
-            }
-            @include safariOnly() {
-              width: 55%;
-            }
-          }
-          .forms__agreement-text {
-            float: left;
-            width: 38%;
-            @include webkitBrowser() {
-              width: 36%;
-            }
-            @include safariOnly() {
-              width: 36%;
-            }
-            .agreement__text {
-              display: inline-block;
-              float: left;
-              font-size: 0.85em;
-              margin-left: 5px;
-              width: 290px;
-            }
-            input[type='checkbox'] {
-              float: left;
-            }
-          }
-          .forms__btn-submit {
-            float: left;
-            width: 5%;
-            @include webkitBrowser() {
-              width: 8%;
-            }
-            @include safariOnly() {
-              width: 5%;
-            }
-          }
+        footer {
         }
       }
-
-      // @include form-btns();
     }
   }
 } // .signee-container
