sprint 5 - more fixes

--- a/front-end/src/app/forms/form-99/form/form.component.scss
+++ b/front-end/src/app/forms/form-99/form/form.component.scss
@@ -8,8 +8,10 @@
   .form__alerts {
     background-color: $bombay;
     &.show-alerts {
+      display: none;
       padding-left: 0;
       @include media(tablet) {
+        display: none;
         padding-left: 0;
       }
       @include media(mediumDesktop) {
