sprint 5 - more updates

--- a/front-end/src/app/forms/form-99/form/form.component.scss
+++ b/front-end/src/app/forms/form-99/form/form.component.scss
@@ -15,9 +15,13 @@
         padding-left: 0;
       }
       @include media(mediumDesktop) {
+        display: inline-block;
+        float: left;
         width: 250px;         
       }         
       @include media(largeDesktop) {
+        display: inline-block;
+        float: left;
         width: 250px; 
       }         
     }    
